Update study report related page and create user related page and institution report setting related page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3410,3 +3410,27 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 .support-contact{
   margin-left: 5px;
 }
+
+.report-all-manual-image-div{
+  margin-top: 10px;
+}
+
+.report-manual-image{
+  height: 156px !important;
+  width: 160px !important;
+}
+
+.report-previous-history-image{
+  height: 112px !important;
+  width: 112px !important;
+}
+
+.report-previous-history-document-name{
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 8px;
+}
+
+.report-previous-history-document-name:hover{
+  color: black;
+}
