Update study assign study related functionality

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3440,3 +3440,16 @@ form.ant-form .ant-form-item .ant-form-item-label label{
 .report-previous-history-document-name:hover{
   color: black;
 }
+
+.patient-data-reference-image{
+  height: 156px !important;
+  width: 170px !important;
+}
+
+.patient-data-download-div{
+  font-size: 15px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  gap:8px;
+}
